--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <li><span style="margin-right:10px">☛</span>21 years old</li>
                         <li><span style="margin-right:10px">☛</span>Argentina</li>
                         <li><span style="margin-right:10px">☛</span>Software Developer</li>
-                        <li><span style="margin-right:10px">☛</span>Computer Science Student</li>
+                        <li><span style="margin-right:10px">☛</span>Computer Science Student <br> at University of Buenos Aires</li>
                      </ul>
                   </section>
                   <section>
