actualice la fuente

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width">
-      <title class="jsx-274266799">AF | Who am I</title>
-      <meta name="description" content="AF | Who am I" class="jsx-274266799">
+      <title class="">AF | Who am I</title>
+      <meta name="description" content="AF | Who am I" class="">
       <link rel="preload" href="./files/65ad9d0ea80a660044b6.css" as="style">
       <link rel="stylesheet" href="./files/65ad9d0ea80a660044b6.css" data-n-g="">
       <link rel="preload" href="./files/36c90b5964a8af9f3c9a.css" as="style">
@@ -13,56 +13,56 @@
       <link rel="icon" type="image/x-icon" href="./files/favicon.ico">
 
       <style id="__jsx-2854453">input.jsx-2854453{padding:0.5em;border:1px solid #ccc;height:100%;font-size:16px;border-radius:4px;}button.jsx-2854453{border:0;background:#2196f3;padding-right:10px;color:white;border-radius:7px;-webkit-appearance:none;-moz-appearance:none;appearance:none;font-weight:600;font-size:14px;display:inline-block;padding-left:10px;padding-right:10px;}.form.jsx-2854453{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;-webkit-align-items:stretch;-webkit-box-align:stretch;-ms-flex-align:stretch;align-items:stretch;gap:10px;}button.jsx-2854453:disabled{opacity:0.7;}.title.jsx-2854453{margin:10px;}.message.jsx-2854453{font-size:13px;margin:5px;}.container.jsx-2854453{max-width:400px;text-align:center;margin:10px auto;}</style>
-      <style id="__jsx-274266799">html,body{padding:0;margin:0;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto, Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue, sans-serif;}@media (prefers-color-scheme:dark){html,body{color-scheme:dark;background:#141414;color:white;}}</style>
+      <style id="__">html,body{padding:0;margin:0;font-family: Consolas,monaco,monospace;}@media (prefers-color-scheme:dark){html,body{color-scheme:dark;background:#141414;color:white;}}</style>
       <style type="text/css" data-styled-jsx=""></style>
       
    </head>
    <body cz-shortcut-listen="true">
       <div id="__next">
-         <div class="jsx-274266799 Home_container__3sao-">
-            <main class="jsx-274266799 Home_main__1Z1aG">
-               <section class="jsx-274266799 Home_intro__3xW-O">
-                  <img src="./files/profile.png" class="jsx-274266799 Home_avatar__LWcjd">
-                  <h1 class="jsx-274266799 Home_title__28pEg">Andres Felder</h1>
-                  <p class="jsx-274266799">Nice to meet you!</p>
+         <div class=" Home_container__3sao-">
+            <main class=" Home_main__1Z1aG">
+               <section class=" Home_intro__3xW-O">
+                  <img src="./files/profile.png" class=" Home_avatar__LWcjd">
+                  <h1 class=" Home_title__28pEg">Andres Felder</h1>
+                  <p class="">Nice to meet you!</p>
                </section>
-               <div class="jsx-274266799 Home_sections__3G_SN">
-                  <section class="jsx-274266799">
-                     <h2 class="jsx-274266799">About Me</h2>
-                     <ul class="jsx-274266799 Home_list__3A6Ue">
-                        <li class="jsx-274266799"><span style="margin-right:10px" class="jsx-274266799">☛</span>21 years old</li>
-                        <li class="jsx-274266799"><span style="margin-right:10px" class="jsx-274266799">☛</span>From Argentina</li>
-                        <li class="jsx-274266799"><span style="margin-right:10px" class="jsx-274266799">☛</span>Software Developer</li>
-                        <li class="jsx-274266799"><span style="margin-right:10px" class="jsx-274266799">☛</span>Computer Science <br> Student at University <br> of Buenos Aires</li>
+               <div class=" Home_sections__3G_SN">
+                  <section class="">
+                     <h2 class="">About Me</h2>
+                     <ul class=" Home_list__3A6Ue">
+                        <li class=""><span style="margin-right:10px" class="">☛</span>21 years old</li>
+                        <li class=""><span style="margin-right:10px" class="">☛</span>From Argentina</li>
+                        <li class=""><span style="margin-right:10px" class="">☛</span>Software Developer</li>
+                        <li class=""><span style="margin-right:10px" class="">☛</span>Computer Science <br> Student at University <br> of Buenos Aires</li>
 
                      </ul>
                   </section>
-                  <section class="jsx-274266799">
-                     <h2 class="jsx-274266799">Social Media</h2>
-                     <ul class="jsx-274266799 Home_list__3A6Ue">
-                        <li class="jsx-274266799">
-                           <div class="jsx-274266799"><span style="margin-right:10px" class="jsx-274266799">☛</span><a href="https://twitter.com/Andyfelderr" target="_blank" class="jsx-274266799">Twitter</a></div>
+                  <section class="">
+                     <h2 class="">Social Media</h2>
+                     <ul class=" Home_list__3A6Ue">
+                        <li class="">
+                           <div class=""><span style="margin-right:10px" class="">☛</span><a href="https://twitter.com/Andyfelderr" target="_blank" class="">Twitter</a></div>
                         </li>
-                        <li class="jsx-274266799">
-                           <div class="jsx-274266799"><span style="margin-right:10px" class="jsx-274266799">☛</span><a href="https://www.linkedin.com/in/andresfelder/" target="_blank" class="jsx-274266799">LinkedIn</a></div>
+                        <li class="">
+                           <div class=""><span style="margin-right:10px" class="">☛</span><a href="https://www.linkedin.com/in/andresfelder/" target="_blank" class="">LinkedIn</a></div>
                         </li>
-                        <li class="jsx-274266799">
-                           <div class="jsx-274266799"><span style="margin-right:10px" class="jsx-274266799">☛</span><a href="mailto:andyfelder16@gmail.com" target="_blank" class="jsx-274266799">Contact Me!</a></div>
+                        <li class="">
+                           <div class=""><span style="margin-right:10px" class="">☛</span><a href="mailto:andyfelder16@gmail.com" target="_blank" class="">Contact Me!</a></div>
                         </li>
                      </ul>              
                </div>
-               <h2 class="jsx-274266799">Extras 👇</h2>
-               <div class="jsx-274266799 Home_issue-container__3tREi">
-                  <a class="jsx-274266799 Home_issue-line__1uydt">
-                     <div class="jsx-274266799 Home_issue-title__AM-Oy">Learning Solidity and the Ethereum Network</div>
-                     <div class="jsx-274266799 Home_issue-snippet__2da0n">I started investing on Crypto on 2020, it called a lot my attention and I asked myself how does crypto work? So as I could answer that question, I started investigating. You can start this journey as I did, reading the docs, and also watching a lot of YouTube videos.</div>
+               <h2 class="">Extras 👇</h2>
+               <div class=" Home_issue-container__3tREi">
+                  <a class=" Home_issue-line__1uydt">
+                     <div class=" Home_issue-title__AM-Oy">Learning Solidity and the Ethereum Network</div>
+                     <div class=" Home_issue-snippet__2da0n">I started investing on Crypto, it called a lot my attention and I asked myself how does crypto work? So as I could not answer that question, I started investigating. You can start this journey as I did, reading the docs, and also watching a lot of YouTube videos.</div>
                   </a>
                   <a class="w3-tag w3-blue" target="_blank" href="https://buildmedia.readthedocs.org/media/pdf/solidity/develop/solidity.pdf#page1">Link 1</a>
                   <a class="w3-tag w3-blue" target="_blank" href="https://docs.soliditylang.org/en/v0.8.11/introduction-to-smart-contracts.html">Link 2</a>
 
-                  <a class="jsx-274266799 Home_issue-line__1uydt">
-                    <div class="jsx-274266799 Home_issue-title__AM-Oy">Currently working as IT intern at Techint Group</div>
-                    <div class="jsx-274266799 Home_issue-snippet__2da0n">On December 21 I started my journey as IT intern at Techint Group. Doing some cool stuff related to web development and much more.</div>
+                  <a class=" Home_issue-line__1uydt">
+                    <div class=" Home_issue-title__AM-Oy">Currently working as IT intern at Techint Group</div>
+                    <div class=" Home_issue-snippet__2da0n">On December '21 I started my journey as IT intern at Techint Group. Doing some cool stuff related to web development and much more.</div>
                  </a>
                </div>
             </main>
