--- a/index.html
+++ b/index.html
@@ -5,16 +5,27 @@
       <meta name="viewport" content="width=device-width">
       <title class="">AF | Who am I</title>
       <meta name="description" content="AF | Who am I" class="">
+      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
       <link rel="preload" href="./files/65ad9d0ea80a660044b6.css" as="style">
       <link rel="stylesheet" href="./files/65ad9d0ea80a660044b6.css" data-n-g="">
       <link rel="preload" href="./files/36c90b5964a8af9f3c9a.css" as="style">
       <link rel="stylesheet" href="./files/36c90b5964a8af9f3c9a.css" data-n-p="">
-      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
       <link rel="icon" type="image/x-icon" href="./files/favicon.ico">
 
-      <style id="__jsx-2854453">input.jsx-2854453{padding:0.5em;border:1px solid #ccc;height:100%;font-size:16px;border-radius:4px;}button.jsx-2854453{border:0;background:#2196f3;padding-right:10px;color:white;border-radius:7px;-webkit-appearance:none;-moz-appearance:none;appearance:none;font-weight:600;font-size:14px;display:inline-block;padding-left:10px;padding-right:10px;}.form.jsx-2854453{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;-webkit-align-items:stretch;-webkit-box-align:stretch;-ms-flex-align:stretch;align-items:stretch;gap:10px;}button.jsx-2854453:disabled{opacity:0.7;}.title.jsx-2854453{margin:10px;}.message.jsx-2854453{font-size:13px;margin:5px;}.container.jsx-2854453{max-width:400px;text-align:center;margin:10px auto;}</style>
-      <style id="__">html,body{padding:0;margin:0;font-family: Consolas,monaco,monospace;}@media (prefers-color-scheme:dark){html,body{color-scheme:dark;background:#141414;color:white;}}</style>
-      <style type="text/css" data-styled-jsx=""></style>
+      <style id="__">
+      html,body{
+         padding:0;
+         margin:0;
+         font-family: Consolas,monaco,monospace;
+      }
+      @media (prefers-color-scheme:dark){
+         html,body{
+            color-scheme:dark;
+            background:#141414;
+            color:white;
+         }
+      }
+      </style>
       
    </head>
    <body cz-shortcut-listen="true">
@@ -28,7 +39,7 @@
                </section>
                <div class=" Home_sections__3G_SN">
                   <section class="">
-                     <h2 class="">About Me</h2>
+                     <h2 class=""><u>About Me</u></h2>
                      <ul class=" Home_list__3A6Ue">
                         <li class=""><span style="margin-right:10px" class="">☛</span>21 years old</li>
                         <li class=""><span style="margin-right:10px" class="">☛</span>From Argentina</li>
@@ -38,7 +49,7 @@
                      </ul>
                   </section>
                   <section class="">
-                     <h2 class="">Social Media</h2>
+                     <h2 class=""><u>Social Media</u></h2>
                      <ul class=" Home_list__3A6Ue">
                         <li class="">
                            <div class=""><span style="margin-right:10px" class="">☛</span><a href="https://twitter.com/Andyfelderr" target="_blank" class="">Twitter</a></div>
@@ -51,7 +62,7 @@
                         </li>
                      </ul>              
                </div>
-               <h2 class="">Extras 👇</h2>
+               <h2 class=""><u>Extras</u> 👇</h2>
                <div class=" Home_issue-container__3tREi">
                   <a class=" Home_issue-line__1uydt">
                      <div class=" Home_issue-title__AM-Oy">Learning Solidity and the Ethereum Network</div>
@@ -66,79 +77,7 @@
                  </a>
                </div>
             </main>
-            <div class="__react_component_tooltip t66b68083-2020-4e8f-ab95-9e0022df76ab place-top type-dark" id="t66b68083-2020-4e8f-ab95-9e0022df76ab" data-id="tooltip">
-               <style aria-hidden="true">
-                  .t66b68083-2020-4e8f-ab95-9e0022df76ab {
-                  color: #fff;
-                  background: #222;
-                  border: 1px solid transparent;
-                  }
-                  .t66b68083-2020-4e8f-ab95-9e0022df76ab.place-top {
-                  margin-top: -10px;
-                  }
-                  .t66b68083-2020-4e8f-ab95-9e0022df76ab.place-top::before {
-                  border-top: 8px solid transparent;
-                  }
-                  .t66b68083-2020-4e8f-ab95-9e0022df76ab.place-top::after {
-                  border-left: 8px solid transparent;
-                  border-right: 8px solid transparent;
-                  bottom: -6px;
-                  left: 50%;
-                  margin-left: -8px;
-                  border-top-color: #222;
-                  border-top-style: solid;
-                  border-top-width: 6px;
-                  }
-                  .t66b68083-2020-4e8f-ab95-9e0022df76ab.place-bottom {
-                  margin-top: 10px;
-                  }
-                  .t66b68083-2020-4e8f-ab95-9e0022df76ab.place-bottom::before {
-                  border-bottom: 8px solid transparent;
-                  }
-                  .t66b68083-2020-4e8f-ab95-9e0022df76ab.place-bottom::after {
-                  border-left: 8px solid transparent;
-                  border-right: 8px solid transparent;
-                  top: -6px;
-                  left: 50%;
-                  margin-left: -8px;
-                  border-bottom-color: #222;
-                  border-bottom-style: solid;
-                  border-bottom-width: 6px;
-                  }
-                  .t66b68083-2020-4e8f-ab95-9e0022df76ab.place-left {
-                  margin-left: -10px;
-                  }
-                  .t66b68083-2020-4e8f-ab95-9e0022df76ab.place-left::before {
-                  border-left: 8px solid transparent;
-                  }
-                  .t66b68083-2020-4e8f-ab95-9e0022df76ab.place-left::after {
-                  border-top: 5px solid transparent;
-                  border-bottom: 5px solid transparent;
-                  right: -6px;
-                  top: 50%;
-                  margin-top: -4px;
-                  border-left-color: #222;
-                  border-left-style: solid;
-                  border-left-width: 6px;
-                  }
-                  .t66b68083-2020-4e8f-ab95-9e0022df76ab.place-right {
-                  margin-left: 10px;
-                  }
-                  .t66b68083-2020-4e8f-ab95-9e0022df76ab.place-right::before {
-                  border-right: 8px solid transparent;
-                  }
-                  .t66b68083-2020-4e8f-ab95-9e0022df76ab.place-right::after {
-                  border-top: 5px solid transparent;
-                  border-bottom: 5px solid transparent;
-                  left: -6px;
-                  top: 50%;
-                  margin-top: -4px;
-                  border-right-color: #222;
-                  border-right-style: solid;
-                  border-right-width: 6px;
-                  }
-               </style>
-            </div>
+            
          </div>
       </div>
    </body>
