corregi archivos y agregue mis apuntes

--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
       <title class="">AF | Who am I</title>
       <meta name="description" content="AF | Who am I" class="">
       <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-      <link rel="preload" href="./files/65ad9d0ea80a660044b6.css" as="style">
-      <link rel="stylesheet" href="./files/65ad9d0ea80a660044b6.css" data-n-g="">
-      <link rel="preload" href="./files/36c90b5964a8af9f3c9a.css" as="style">
-      <link rel="stylesheet" href="./files/36c90b5964a8af9f3c9a.css" data-n-p="">
+      <link rel="preload" href="./files/style.css" as="style">
+      <link rel="stylesheet" href="./files/style.css" data-n-p="">
       <link rel="icon" type="image/x-icon" href="./files/favicon.ico">
 
       <style id="__">
@@ -70,6 +68,7 @@
                   </a>
                   <a class="w3-tag w3-blue" target="_blank" href="https://buildmedia.readthedocs.org/media/pdf/solidity/develop/solidity.pdf#page1">Link 1</a>
                   <a class="w3-tag w3-blue" target="_blank" href="https://docs.soliditylang.org/en/v0.8.11/introduction-to-smart-contracts.html">Link 2</a>
+                  <a class="w3-tag w3-blue" target="_blank" href="https://good-jingle-c69.notion.site/Apuntes-Solidity-60b03ba4f3d348adadb7265fcb46f11f">(ESP) Apuntes</a>
 
                   <a class=" Home_issue-line__1uydt">
                     <div class=" Home_issue-title__AM-Oy">Currently working as IT intern at Techint Group</div>
