--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          <div class=" Home_container__3sao-">
             <main class=" Home_main__1Z1aG">
                <section class=" Home_intro__3xW-O">
-                  <img src="./files/profile.png" class=" Home_avatar__LWcjd">
+                  <img src="./files/fotoPerfil.jpg" class=" Home_avatar__LWcjd">
                   <h1 class=" Home_title__28pEg">Andres Felder</h1>
                   <p class="">Nice to meet you!</p>
                </section>
