cambie iconos de links y agregue mi gh

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <title class="">AF | Who am I</title>
       <meta name="description" content="AF | Who am I" class="">
       <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="preload" href="./files/style.css" as="style">
       <link rel="stylesheet" href="./files/style.css" data-n-p="">
       <link rel="icon" type="image/x-icon" href="./files/favicon.ico">
@@ -50,14 +51,18 @@
                      <h2 class=""><u>Social Media</u></h2>
                      <ul class=" Home_list__3A6Ue">
                         <li class="">
-                           <div class=""><span style="margin-right:10px" class="">☛</span><a href="https://twitter.com/Andyfelderr" target="_blank" class="">Twitter</a></div>
+                           <div class=""><span style="margin-right:10px" class=""><i class="fa fa-twitter" style="font-size:12px"></i></span><a href="https://twitter.com/Andyfelderr" target="_blank" class="">Twitter</a></div>
                         </li>
                         <li class="">
-                           <div class=""><span style="margin-right:10px" class="">☛</span><a href="https://www.linkedin.com/in/andresfelder/" target="_blank" class="">LinkedIn</a></div>
+                           <div class=""><span style="margin-right:10px" class=""><i class="fa fa-linkedin" style="font-size:12px"></i></span><a href="https://www.linkedin.com/in/andresfelder/" target="_blank" class="">LinkedIn</a></div>
                         </li>
                         <li class="">
-                           <div class=""><span style="margin-right:10px" class="">☛</span><a href="mailto:andyfelder16@gmail.com" target="_blank" class="">Contact Me!</a></div>
+                           <div class=""><span style="margin-right:10px" class=""><i class="fa fa-github" style="font-size:12px"></i></span><a href="https://github.com/andyfelder16" target="_blank" class="">My GitHub</a></div>
                         </li>
+                        <li class="">
+                           <div class=""><span style="margin-right:10px" class=""><i class="fa fa-envelope" style="font-size:12px"></i></span><a href="mailto:andyfelder16@gmail.com" target="_blank" class="">Contact Me!</a></div>
+                        </li>
+                        
                      </ul>              
                </div>
                <h2 class=""><u>Extras</u> 👇</h2>
