--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <link rel="stylesheet" href="dark.css" media="(prefers-color-scheme: dark)"
    </head>
    <body cz-shortcut-listen="true">
-   <dark-mode-toggle permanent remember="Remember"></dark-mode-toggle>
+   <dark-mode-toggle permanent></dark-mode-toggle>
       <div id="__next">
          <div class=" Home_container__3sao-">
             <main class=" Home_main__1Z1aG">
