--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                            <div class=""><span style="margin-right:10px" class=""><i class="fa fa-linkedin" style="font-size:12px"></i></span><a href="https://www.linkedin.com/in/andresfelder/" target="_blank" class="">LinkedIn</a></div>
                         </li>
                         <li class="">
-                           <div class=""><span style="margin-right:10px" class=""><i class="fa fa-github" style="font-size:12px"></i></span><a href="https://github.com/andyfelder16" target="_blank" class="">My GitHub</a></div>
+                           <div class=""><span style="margin-right:10px" class=""><i class="fa fa-github" style="font-size:12px"></i></span><a href="https://github.com/andyfelder16" target="_blank" class="">GitHub</a></div>
                         </li>
                         <li class="">
                            <div class=""><span style="margin-right:10px" class=""><i class="fa fa-envelope" style="font-size:12px"></i></span><a href="mailto:andyfelder16@gmail.com" target="_blank" class="">Contact Me!</a></div>
