actualice mi favicon

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="preload" href="./files/style.css" as="style">
       <link rel="stylesheet" href="./files/style.css" data-n-p="">
-      <link rel="icon" type="image/x-icon" href="./files/favicon.ico">
+      <link rel="icon" type="image/x-icon" href="./files/favicon.png">
 
       <style id="__">
       html,body{
