--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
       </style>
       <script type="module" src="https://unpkg.com/dark-mode-toggle"></script>
       <link rel="stylesheet" href="dark.css" media="(prefers-color-scheme: dark)"
+
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-DBEFX4WX5V"></script>
+      <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-DBEFX4WX5V');
+      </script>
    </head>
    <body cz-shortcut-listen="true">
    <dark-mode-toggle permanent></dark-mode-toggle>
