subo tidy data y cambie la posicion de los extras

--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
                         
                      </ul>              
                </div>
+               <div class=" Home_issue-container__3tREi">
+                  <a class=" Home_issue-line__1uydt">
+                     <div class=" Home_issue-title__AM-Oy">Currently working as IT intern at Techint Group</div>
+                     <div class=" Home_issue-snippet__2da0n">On December '21 I started my journey as IT intern at Techint Group. Doing some cool stuff related to reporting of analytics, web development and much more.</div>
+                  </a>
+               </div>
                <h2 class=""><u>Extras</u> 👇</h2>
                <div class=" Home_issue-container__3tREi">
                   <a class=" Home_issue-line__1uydt">
@@ -82,9 +88,12 @@
                   <a class="w3-tag w3-blue" target="_blank" href="https://good-jingle-c69.notion.site/Apuntes-Solidity-60b03ba4f3d348adadb7265fcb46f11f">(ESP) Apuntes</a>
 
                   <a class=" Home_issue-line__1uydt">
-                    <div class=" Home_issue-title__AM-Oy">Currently working as IT intern at Techint Group</div>
-                    <div class=" Home_issue-snippet__2da0n">On December '21 I started my journey as IT intern at Techint Group. Doing some cool stuff related to web development and much more.</div>
+                    <div class=" Home_issue-title__AM-Oy">Tidying data</div>
+                    <div class=" Home_issue-snippet__2da0n">"It is often said that 80% of data analysis is spent on the process of cleaning and preparing
+                     the data". This is a text that a teacher sent us and I found it very interesting. Now I understand the importance of tidying up data, as well as some common mistakes and how to fix them.</div>
                  </a>
+                 <a class="w3-tag w3-blue" target="_blank" href="./files/tidyData.pdf">Tidy Data - Hadley Wickham</a>
+
                </div>
             </main>
             
