--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       </style>
       <script type="module" src="https://unpkg.com/dark-mode-toggle"></script>
-      <link rel="stylesheet" href="dark.css" media="(prefers-color-scheme: dark)"
+      <link rel="stylesheet" href="dark.css" media="(prefers-color-scheme: dark)">
 
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-DBEFX4WX5V"></script>
