--- a/index.html
+++ b/index.html
@@ -73,9 +73,11 @@
                </div>
                <div class=" Home_issue-container__3tREi">
                   <a class=" Home_issue-line__1uydt">
-                     <div class=" Home_issue-title__AM-Oy">Currently working as IT intern at Techint Group</div>
-                     <div class=" Home_issue-snippet__2da0n">On December '21 I started my journey as IT intern at Techint Group. Doing some cool stuff related to reporting of analytics, web development and much more.</div>
+                     <div class=" Home_issue-title__AM-Oy">Currently working as developer at Zerf</div>
+                     <div class=" Home_issue-snippet__2da0n">Working as a Backend Engineer. Doing cool stuff related on creating and designing scalable systems. Using NodeJS, MongoDB and AWS.</div>
                   </a>
+                 <a class="w3-tag w3-blue" target="_blank" href="https://www.zerf.com.ar/">Zerf</a>
+
                </div>
                <h2 class=""><u>Extras</u> 👇</h2>
                <div class=" Home_issue-container__3tREi">
