--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                <div class=" Home_issue-container__3tREi">
                   <a class=" Home_issue-line__1uydt">
                      <div class=" Home_issue-title__AM-Oy">Currently working as developer at Zerf</div>
-                     <div class=" Home_issue-snippet__2da0n">Working as a Backend Engineer. Doing cool stuff related on creating and designing scalable systems. Using NodeJS, MongoDB and AWS.</div>
+                     <div class=" Home_issue-snippet__2da0n">Working as a Backend Developer. Doing cool stuff related on creating and designing scalable systems.</div>
                   </a>
                  <a class="w3-tag w3-blue" target="_blank" href="https://www.zerf.com.ar/">Zerf</a>
 
